--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "typescript": "^5.0.0",
     "vite": "^4.4.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "dotenv": "^16.3.1"
+  }
 }
