--- a/package.json
+++ b/package.json
@@ -21,8 +21,5 @@
     "typescript": "^5.0.0",
     "vite": "^4.4.2"
   },
-  "type": "module",
-  "dependencies": {
-    "dotenv": "^16.3.1"
-  }
+  "type": "module"
 }
