--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.27.4",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "svelte": "^4.2.7",
@@ -19,6 +20,7 @@
     "tailwindcss": "^3.3.5",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
+    "uuid": "^9.0.1",
     "vite": "^4.4.2"
   },
   "type": "module"
