--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "json-server": "npx json-server src/db.json"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.27.4",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
+    "json-server": "^1.0.0-alpha.23",
     "postcss": "^8.4.32",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
